--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@
 }
 
 .first-container .information {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'cocogoose', sans-serif;
+  src: url(./fonts/cocogoose-pro.semilight.ttf);
   position: absolute;
   z-index: 2;
   justify-content: center;
@@ -47,18 +48,25 @@
 }
 
 .second-container {
-  /* background-image: url('./images/bgforabout.jpg');
-  background-repeat: no-repeat;
-  background-size: cover; */
-  background-color: #272a31;
+  background-image: url('./images/pattern_bg.png');
+  background-repeat: repeat;
+
+  /* background-size: cover;  */
+  background-color: rgb(39, 42, 50);
   color: white;
   text-align: center;
   padding: 50px;
+  margin-top: 30px;
 }
 
 .second-container .programs {
-  display: grid;
-  grid-gap: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.second-container .programs .program img {
+  width: 200px;
 }
 
 .second-container .about-heading {
@@ -76,6 +84,17 @@
   color: #ec5242;
 }
 
+.second-container a {
+  background: #ec5242;
+  padding: 17px;
+  margin: 50px;
+  text-decoration: none;
+  font-family: 'Roboto';
+  font-size: 20px;
+  color: white;
+  width: 300px;
+}
+
 .cover-gradient-program {
   width: 100%;
   height: 100%;
@@ -90,6 +109,10 @@
   opacity: 0.7;
 }
 
+.container-fluid .close-ham-img {
+  display: none;
+}
+
 @media screen and (min-width: 968px) {
   .up-header {
     display: flex;
@@ -97,6 +120,15 @@
   }
 
   .container-fluid .icon {
+    display: none;
+  }
+
+  .second-container .programs {
+    flex-direction: row;
+    column-gap: 10px;
+  }
+
+  .container-fluid .close-ham-img {
     display: none;
   }
 }
