--- a/about.css
+++ b/about.css
@@ -1,30 +1,63 @@
+@media screen and (min-width: 768px) {
+  .first-content {
+    background-image: url('./images/mobile_intro_bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+  }
 
-.first-content {
-  background-color: #e6e6e6;
+  .first-content .detail-desc {
+    border: 1px solid rgb(223, 223, 223);
+    width: 960px;
+    background: rgb(255, 255, 255);
+  }
+
+  .about-second-section {
+    border-bottom: 1px solid rgb(223, 223, 223);
+  }
+
+  .about-second-section .wlit-logo {
+    width: 400px;
+    height: 400px;
+  }
+
+  .footer-flex {
+    background-color: #272a31;
+    height: 200px;
+    color: #fff;
+  }
+
+  .footer-flex .footer-logo a {
+    text-decoration: none;
+    color: white;
+  }
 }
 
-.first-content .detail-desc {
-  border: 1px solid rgb(223, 223, 223);
-  width: 960px;
-  background: rgb(255, 255, 255);
-}
+@media screen and (max-width: 767.99px) {
+  .first-content {
+    margin: 40px;
+  }
 
-.about-second-section {
-  border-bottom: 1px solid rgb(223, 223, 223);
-}
+  .first-content .content-img img {
+    width: 100%;
+    height: auto;
+  }
 
-.about-second-section .wlit-logo {
-  width: 134px;
-  height: 189px;
-}
+  .events .events-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.footer-flex {
-  background-color: #272a31;
-  height: 200px;
-  color: #fff;
-}
+  .events .events-images .first-event {
+    height: 50%;
+    width: 90%;
+    margin-bottom: 20px;
+  }
 
-.footer-flex .footer-logo a {
-  text-decoration: none;
-  color: white;
+  .events .events-images .second-event {
+    height: 30%;
+    width: 90%;
+  }
 }
