--- a/about.css
+++ b/about.css
@@ -1,42 +1,50 @@
-@media screen and (min-width: 768px) {
-  .first-content {
-    background-image: url('./images/mobile_intro_bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 90vh;
-  }
+.about-second-section .wlit-logo {
+  border: 1px solid black;
+}
 
-  .first-content .detail-desc {
-    border: 1px solid rgb(223, 223, 223);
-    width: 960px;
-    background: rgb(255, 255, 255);
-  }
+.about-second-section {
+  border-bottom: 1px solid rgb(223, 223, 223);
+}
 
-  .about-second-section {
-    border-bottom: 1px solid rgb(223, 223, 223);
-  }
+.first-content .detail-desc {
+  border: 1px solid rgb(223, 223, 223);
+  background: rgb(255, 255, 255);
+  width: 80%;
+}
 
-  .about-second-section .wlit-logo {
-    width: 400px;
-    height: 400px;
-  }
+.events h4::after {
+  content: "";
+  display: block;
+  border: 1px solid #ec5242;
+  width: 5%;
+  margin: 10px auto;
+}
 
-  .footer-flex {
-    background-color: #272a31;
-    height: 200px;
-    color: #fff;
-  }
+.first-content {
+  background-image: url('./images/mobile_intro_bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+}
 
-  .footer-flex .footer-logo a {
-    text-decoration: none;
-    color: white;
-  }
+.events .events-images .first-event {
+  height: 30%;
+  width: 50%;
+  margin-right: 10px;
+}
+
+.events .events-images .second-event {
+  height: 30%;
+  width: 50%;
+}
+
+.up-footer {
+  display: none;
 }
 
 @media screen and (max-width: 767.99px) {
   .first-content {
-    margin: 40px;
+    width: 100%;
   }
 
   .first-content .content-img img {
@@ -44,8 +52,12 @@
     height: auto;
   }
 
+  .about-second-section .wlit-logo {
+    width: 100%;
+    height: auto;
+  }
+
   .events .events-images {
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -59,5 +71,9 @@
   .events .events-images .second-event {
     height: 30%;
     width: 90%;
+  }
+
+  .up-footer {
+    display: flex;
   }
 }
