--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ html {
   font-size: 20px;
   text-decoration: none;
   margin: 3px 50px;
+  transition: all 1s ease-out;
+}
+
+#navbarNavDropdown a:focus,
+a:hover {
+  color: #333;
+  background-color: #fff;
 }
 
 #nav-btn {
@@ -49,6 +56,10 @@ html {
   color: #ec5242;
 }
 
+.color2 {
+  color: #d3d3d3;
+}
+
 .no-scroll {
   overflow: hidden;
 }
@@ -62,7 +73,6 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 90vh;
   text-align: center;
   padding: 30px;
 }
@@ -228,9 +238,13 @@ p {
   margin: 10px 0;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
+  .first-container {
+    height: 90vh;
+  }
+
   .first-container .information {
-    margin: 50px 100px;
+    margin: 50px;
     text-align: left;
   }
 
